<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/m_back_bt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/pwd_back_arr"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginBottom="15dp"
            >
            <RelativeLayout
                android:id="@+id/m_pwd_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >
                <LinearLayout
                    android:id="@+id/m_pwd_dot_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"

                    >
                    <ImageView
                        android:id="@+id/m_pwd_dot_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pwd_dot_empty"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/m_pwd_dot_b"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pwd_dot_empty"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/m_pwd_dot_c"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pwd_dot_empty"
                        android:layout_gravity="center"
                        />
                    <ImageView
                        android:id="@+id/m_pwd_dot_d"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pwd_dot_empty"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_below="@+id/m_pwd_dot"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:id="@+id/m_n1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_1"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N1"
                            />
                        <Button
                            android:id="@+id/m_n2"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_2"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N2"
                            />
                        <Button
                            android:id="@+id/m_n3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_3"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N3"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:id="@+id/m_n4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_4"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N4"
                            />
                        <Button
                            android:id="@+id/m_n5"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_5"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N5"
                            />
                        <Button
                            android:id="@+id/m_n6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_6"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N6"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:id="@+id/m_n7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_7"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N7"
                            />
                        <Button
                            android:id="@+id/m_n8"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_8"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N8"
                            />
                        <Button
                            android:id="@+id/m_n9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_9"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N9"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:textSize="60dp"
                            android:textColor="#FFFFFF"
                            android:visibility="invisible"
                            />
                        <Button
                            android:id="@+id/m_n0"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/num_bg_press"
                            android:layout_gravity="center"
                            android:text="@string/key_num_0"
                            android:textSize="50dp"
                            android:textColor="#FFFFFF"
                            android:tag="N0"
                            />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/m_nd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/num_bg_press"
                                android:layout_gravity="center"
                                android:layout_centerInParent="true"
                                android:tag="ND"
                                />
                            <ImageView
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/pwd_delete_tag"
                                />
                        </RelativeLayout>


                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
