<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19000000"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/super_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:layout_marginTop="32px"
        android:layout_marginRight="48px"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sunmi_super_screen"
            android:layout_marginRight="20px"
            />
        <TextView
            android:id="@+id/quit_super"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#99C8C8C8"
            android:textSize="24px"
            android:text="@string/quit_super"
            />
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#19000000"
        >
        
        <LinearLayout
            android:id="@+id/restart_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/restart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunmi_restart" />
                <ImageView
                    android:id="@+id/restart_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunmi_restart_normal"
                    android:visibility="invisible"
                    />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop"
                android:text="@string/global_action_reboot"
                android:textColor="#C8C8C8"
                android:textSize="@dimen/textsize" 
                android:minWidth="@dimen/minwidth"
                android:gravity="center"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/middle_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunmi_middle" />

        <LinearLayout
            android:id="@+id/shutdown_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/shutdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunmi_shutdown" />
                <ImageView
                    android:id="@+id/shutdown_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunmi_shutdown_normal"
                    android:visibility="invisible"
                    />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop"
                android:text="@string/global_action_power_off"
                android:textColor="#C8C8C8"
                android:textSize="@dimen/textsize" 
                android:minWidth="@dimen/minwidth"
                android:gravity="center"
                />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/prograssbar"
            android:layout_width="100px"
            android:layout_height="100px"
            android:indeterminateDrawable="@drawable/progress_sunmi_shutdown"/>
    </LinearLayout>
</FrameLayout>
